stag/applications/registry/registry-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
  name: registry-ingress
  labels:
    stable.k8s.psg.io/kcm.class: default
  namespace: kube-system
spec:
  rules:
  - host: registry.test
    http:
      paths:
      - path:
        backend:
          serviceName: kube-registry
          servicePort: 5000
